# minimal-vulkan-compute-shader

./: .gitignore  CMakeLists.txt  README.md
shaders/: shader.comp
src/: main.cpp
